Fixed image stretch

--- a/public/css/test.css
+++ b/public/css/test.css
@@ -374,32 +374,40 @@ font-size: 25px;
     margin: auto;
     border: 6px solid #fff;
     border-radius: 50%; 
-    height: 190px ;width: 190px ;
+    height: 220px ;width: 190px ;
     float: left;
+    /*
     -webkit-box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 	-moz-box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+    */
 }
 
 
 #profile-pic{
+    /*
     height: 180px;
     width: 180px;
+    */
     border-radius: 50%; 
     margin: auto;
     display: block;
     
 }
 
+#title-header{
+    color: black;
+    font-family: 'Fjalla One', sans-serif;
+}
 
-#title{
+#title-contact{
     color: black;
     text-align: center;
     font-family: 'Fjalla One', sans-serif;
 }
 
 .header-description{
-    margin-left: 40%;
+    margin-left: 43%;
     position: absolute;
     float: left;
   
